<resources>
    <string name="app_name">Face Scan</string>
    <string name="connection_error"> Error al conectar con el servidor!</string>
    <string name="internet_error"> Por favor, chequee su conexión a internet!</string>
    <string name="unknown_error">Ups, lo sentimos! Ocurrió un error desconocido</string>
    <string name="not_implemented_error">Not Implemented Error</string>
    <string name="insert_persons_error"> Error al guardar los datos de la persona</string>
    <string name="get_persons_error"> Error al obtener las personas</string>
    <string name="get_remote_persons_error"> Error al identificar el rostro</string>
    <string name="update_persons_error"> Error al actualizar los datos de las personas</string>
    <string name="delete_persons_error"> Error al eliminar las personas</string>
    <string name="insert_companies_error"> Error al guardar las empresas</string>
    <string name="get_companies_error"> Error al obtener las empresas</string>
    <string name="update_companies_error"> Error al actualizar los datos de las empresas</string>
    <string name="delete_companies_error"> Error al eliminar las empresas</string>
    <string name="insert_presence_error"> Error al guardar las presencias</string>
    <string name="get_presences_error"> Error al obtener las presencias</string>
    <string name="update_presences_error"> Error al actualizar los datos de las presencias</string>
    <string name="delete_presences_error"> Error al eliminar las presencias</string>
    <string name="uri_error">No hemos podido resolver el uri</string>
    <string name="location_error">No hemos podido localizarte</string>
    <string name="locating_you">Localizandote...</string>
    <string name="connect_to_network_for_locating_you">Conéctate a una red para localizarte</string>
    <string name="get_place_error"> Error al obtener su localizacion</string>
    <string name="faces_detected">Rostros Detectados</string>
    <string name="persons_detected">Personas identificadas</string>
    <string name="save_detected_faces_error">Error al guardar los rostros detectados</string>
    <string name="invalid_person">Datos inválidos</string>
    <string name="field_empty_error">Rellene el campo</string>
    <string name="invalid_name">Nombre inválido!</string>
    <string name="invalid_paternal_name">Nombre paterno inválido!</string>
    <string name="invalid_maternal_name">Nombre materno inválido!</string>
    <string name="invalid_rfc">RFC inválido!</string>
    <string name="invalid_credentials">Credenciales Inválidas</string>
    <string name="companies">Empresas</string>
    <string name="select_company">Seleccione una Empresa para continuar</string>
    <string name="unknown_company">Empresa Desconocida</string>
    <string name="sync_local_data_error">Error al actualizar los datos locales</string>
    <string name="unknown">Desconocido</string>
    <string name="unknown_detected_faces">Hay rostros desconocidos. \nPor favor guardelos, para continuar.</string>
    <string name="no_detected_faces">No hay rostros detectados</string>
    <string name="no_unknown_faces">Todos los rostros fueron reconocidos</string>
    <string name="remote_search_completed">Busqueda remota completada</string>
    <string name="pending_remote_search">Hay rostros desconocidos.Ejecute una busqueda remota antes.</string>
    <string name="name">Nombre</string>
    <string name="paternal">Paterno</string>
    <string name="maternal">Materno</string>
    <string name="rfc">RFC</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="download_error">Download error</string>
    <string name="start_over">Start over</string>
    <string name="menu_item_settings">Settings</string>
    <string name="select_image">Select image</string>
    <string name="pref_screen_title_live_preview">Live preview settings</string>
    <string name="pref_screen_title_still_image">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview">CameraX live preview settings</string>
    <string name="pref_category_face_detection">Face Detection</string>
    <string name="pref_category_object_detection">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection">Pose Detection</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_target_resolution" translatable="false">ctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size">Front camera preview size</string>
    <string name="pref_title_camerax_target_resolution">CameraX target resolution</string>
    <string name="pref_title_camera_live_viewport">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_title_face_detector_landmark_mode">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks">All landmarks</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>
    <string name="pref_title_face_detector_contour_mode">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours">All contours</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>
    <string name="pref_title_face_detector_classification_mode">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications">All classifications</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>
    <string name="pref_title_face_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate">Accurate</string>
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_face_detector_face_tracking">Face tracking</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>
    <string name="pref_title_face_detector_min_face_size">Minimum face size</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_dialog_message_face_detector_min_face_size">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_toast_invalid_min_face_size">Minimum face size must be a float value and in the range [0.0, 1.0]</string>
    <string name="pref_title_pose_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_pose_detection_performance_mode" translatable="false">lppdpm</string>
    <string name="pref_key_still_image_pose_detection_performance_mode" translatable="false">sipdpm</string>
    <string name="pref_entries_pose_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_pose_detector_performance_mode_accurate">Accurate</string>
    <string name="pref_entry_values_pose_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_pose_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_pose_detector_show_in_frame_likelihood">Show In-Frame Likelihood </string>
    <string name="pref_key_live_preview_pose_detector_show_in_frame_likelihood" translatable="false">lppdsifl</string>
    <string name="pref_key_still_image_pose_detector_show_in_frame_likelihood" translatable="false">sipdsifl</string>
    <string name="retrieve_data_error">Error al recuperar los datos</string>
    <string name="delete_data_error">Error al eliminar los datos</string>
    <string name="save_data_error">Error al guardar los datos</string>
    <string name="search">Buscar...</string>
    <string name="add_new_face_vector">Añadir nuevo rostro</string>
    <string name="add">Añadir</string>
    <string name="see_detected_faces">Ver rostros detectados</string>
    <string name="see_detected_personas">Ver personas</string>
    <string name="identify">Identificar</string>
    <string name="send">Enviar</string>
    <string name="next">Siguiente</string>
    <string name="pin">Pin</string>
</resources>