<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progress"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:lottie_rawRes="@raw/loading"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:translationZ="5dp"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_20dp"
            android:padding="3dp"
            android:src="@drawable/ic_round_close_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/gray_125" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comforta_semibold"
            android:text="@string/add_new_face_vector"
            android:textSize="22sp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/close"
            app:layout_constraintHorizontal_bias="0.0"
            />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_round_info_24"
            android:translationZ="1dp"
            android:tint="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="@id/rfc_edit"
            app:layout_constraintStart_toStartOf="@id/rfc_edit"
            app:layout_constraintTop_toTopOf="@id/rfc_edit" />

        <EditText
            android:id="@+id/rfc_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/gray_235_back_18dp"
            android:fontFamily="@font/comforta_regular"
            android:hint="@string/rfc"
            android:inputType="text"
            android:maxLength="13"
            android:paddingStart="50dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:textColorHint="@color/dark_blue"
            android:textSize="19sp"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_round_vpn_key_24"
            android:translationZ="1dp"
            android:tint="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="@id/pin_edit"
            app:layout_constraintStart_toStartOf="@id/pin_edit"
            app:layout_constraintTop_toTopOf="@id/pin_edit" />

        <EditText
            android:id="@+id/pin_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/gray_235_back_18dp"
            android:fontFamily="@font/comforta_regular"
            android:hint="@string/pin"
            android:textColorHint="@color/dark_blue"
            android:inputType="text"
            android:paddingStart="50dp"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:textSize="19sp"
            android:maxLength="50"
            app:layout_constraintTop_toBottomOf="@id/rfc_edit"/>

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:background="@drawable/stroke_back_10dp"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/comforta_bold"
            android:padding="10dp"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/pin_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


